--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/dashboard/_dashboard.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/dashboard/_dashboard.scss
@@ -1,9 +1,25 @@
 .page-civicrm-dashboard {
   #branding {
+    padding: 20px 0 0 0 !important;
+
+    .breadcrumb {
+      padding: 0 40px;
+
+      a {
+        padding: 0 !important;
+      }
+    }
+
+    .add-shortcut {
+      visibility: hidden;
+    }
+
     h1 {
       &.page-title {
-        margin-bottom: 0 !important;
-        background: $crm-accordion-header-color;
+        margin-top: -20px !important;
+        margin-bottom: 20px !important;
+        padding: 0 40px !important;
+        background: $crm-white;
       }
     }
   }
@@ -23,14 +39,7 @@
   }
 
   .crm-dashboard-controls {
-    margin-top: 5px;
-    margin-left: 1px;
-    background: $crm-white;
-    box-shadow: $crm-box-shadow-sub-panel;
-    border-top: 1px solid $crm-dark-grayblue;
-    padding: 5px 5px 15px 5px;
-    position: relative;
-    z-index: 2;
+    margin-top: 0;
 
     a {
       color: $brand-primary !important;
