AI-21: Adjust privacy_operator size

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/advanced-search/pages/_labels.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/advanced-search/pages/_labels.scss
@@ -101,6 +101,10 @@ a.crm-clear-link {
       }
     }
 
+    #privacy_operator {
+      min-width: 100%;
+    }
+
     @media (max-width: $screen-sm-min) {
       > tr {
         @include mx-responsive-search;
