AI-17: Adjust table box shadow

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_tables.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_tables.scss
@@ -247,9 +247,11 @@
         padding: 0;
       }
 
-      #info {
+      > td {
         box-shadow: $box-shadow;
+      }
 
+      #info {
         tr {
           border: 0 !important;
         }
