--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/request-modal/details/toil.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/request-modal/details/toil.html
@@ -1,33 +1,10 @@
 <div class="row">
-  <div class="col-xs-12 form-horizontal" ng-show="!$ctrl.uiOptions.multipleDays">
-    <div class="form-group">
-      <label class="col-xs-4 control-label">Date Worked</label>
-      <div class="col-xs-4">
-        <div class="input-group">
-          <input
-          type="text"
-          class="form-control"
-          uib-datepicker-popup
-          datepicker-options="$ctrl.uiOptions.date.dateWorked.options"
-          show-button-bar="false"
-          ng-model="$ctrl.uiOptions.workedDate"
-          is-open="$ctrl.uiOptions.date.dateWorked.show"/>
-          <span class="input-group-btn">
-            <button
-              type="button"
-              class="btn btn-default fa fa-calendar"
-              ng-click="$ctrl.uiOptions.date.dateWorked.show = true"></button>
-          </span>
-        </div>
-      </div>
-    </div>
-  </div>
   <div class="col-xs-12 form-horizontal">
     <div class="row">
       <label class="col-xs-4 control-label">Duration</label>
       <div class="col-xs-4">
         <div class="chr_custom-select chr_custom-select--full">
-          <select name="reason">
+          <select name="hours" ng-model="$ctrl.request.toilDurationHours" ng-change="$ctrl.request.updateDuration()">
             <option value="0">Hours</option>
             <option value="1">1h</option>
             <option value="2">2h</option>
@@ -46,7 +23,7 @@
       </div>
       <div class="col-xs-4">
         <div class="chr_custom-select chr_custom-select--full">
-          <select name="reason">
+          <select name="minutes" ng-model="$ctrl.request.toilDurationMinutes" ng-change="$ctrl.request.updateDuration()">
             <option value="0">Mins</option>
             <option value="5">5m</option>
             <option value="10">10m</option>
@@ -70,14 +47,12 @@
       <div class="col-xs-12"><p>TOIL to be Accuired:</p></div>
       <div class="col-xs-12">
         <div class="chr_custom-select chr_custom-select--full">
-          <select name="reason">
-            <option value="1">1 Day</option>
-            <option value="2">2 Day</option>
-            <option value="3">3 Day</option>
-            <option value="4">4 Day</option>
-            <option value="5">5 Day</option>
-            <option value="6">6 Day</option>
-            <option value="7">7 Day</option>
+          <select
+            name="toilAmount"
+            ng-options="amount.value as amount.label for amount in $ctrl.toilAmounts"
+            ng-model="$ctrl.request.toil_to_accrue"
+            ng-change="$ctrl.calculateBalanceChange()">
+            <option value="">- select -</option>
           </select>
         </div>
       </div>
