AI-18: Adjust page styling

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_forms.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_forms.scss
@@ -160,6 +160,7 @@ $control-height: 30px;
     label {
       @extend .control-label;
       font-weight: 600 !important;
+      font-size: 13px;
       color: $gray-darker;
     }
 
