--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_modals.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_modals.scss
@@ -107,11 +107,9 @@
 
   .ui-dialog-buttonpane {
     @extend .modal-footer, %open-sans-font-family;
-    background: #ffffff;
-    border-top: 0;
+    background: $crm-white;
     margin-top: 0;
     display: block;
-    background: $gray-lighter;
 
     .ui-dialog-buttonset {
       width: 100%;
@@ -130,6 +128,11 @@
         &:hover {
           color: $crm-white;
           opacity: .8;
+        }
+
+        &,
+        .ui-button-text {
+          font-size: 13px;
         }
       }
     }
