--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_base.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_base.scss
@@ -14,3 +14,30 @@
     border-color: $crm-background;
   }
 }
+
+.page-civicrm {
+  #branding {
+    padding: 20px 0 0 0 !important;
+
+    .breadcrumb {
+      padding: 0 40px;
+
+      a {
+        padding: 0 !important;
+      }
+    }
+
+    .add-shortcut {
+      visibility: hidden;
+    }
+
+    h1 {
+      &.page-title {
+        margin-top: -20px !important;
+        margin-bottom: 20px !important;
+        padding: 0 40px !important;
+        background: $crm-white;
+      }
+    }
+  }
+}
