AI-3: Adjust result search styling

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/advanced-search/pages/_results.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/advanced-search/pages/_results.scss
@@ -9,6 +9,10 @@
     margin-bottom: 15px !important;
   }
 
+  .crm-pager {
+    margin-bottom: 0;
+  }
+
   .crm-pager-nav {
     padding-left: 0 !important;
     a {
@@ -147,5 +151,18 @@
         @include fa-icon(13px, '\f1ad');
       }
     }
+  }
+
+  .font-size12pt {
+    font-size: 18px;
+    font-weight: 600;
+    color: $gray-darker;
+    padding-bottom: 10px;
+  }
+
+  .font-size11pt {
+    font-size: 13px;
+    font-weight: 600;
+    color: $gray-darker;
   }
 }
