AI-19: Remove padding bottom

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_modals.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_modals.scss
@@ -70,7 +70,7 @@
     padding: 20px 20px 0 20px;
     margin-top: 0;
     margin-bottom: 0;
-    padding-bottom: 20px;
+    padding-bottom: 0;
     height: auto !important;
     background: $crm-white;
 
